2010-02-01  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.3

2010-02-01  Miklos Szeredi <miklos@szeredi.hu>

	* Using "--no-canonicalize" with umount(8) conflicts with the race
	fix, sinceit assumes the supplied path is absolute, while the race
	fix relies on the path being relative to the current directory.
	Reported by Tom Rindborg

2010-01-26  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.2

2010-01-21  Miklos Szeredi <miklos@szeredi.hu>

	* Fix race if two "fusermount -u" instances are run in parallel.
	Reported by Dan Rosenberg

	* Make sure that the path to be unmounted doesn't refer to a
	symlink

2010-01-14  Miklos Szeredi <miklos@szeredi.hu>

	* Fix compile error on FreeBSD.  Patch by Jay Sullivan

2009-12-17  Miklos Szeredi <miklos@szeredi.hu>

	* Use '--no-canonicalize' option of mount(8) (available in
	util-linux-ng version 2.17 or greater) to avoid calling
	readling(2) on the newly mounted filesystem before the mount
	procedure is finished.  This has caused a deadlock if "audit" was
	enabled in the kernel.  Also use '--no-canonicalize' for umount to
	avoid touching the mounted filesystem.

2009-09-11  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.1

2009-08-25  Miklos Szeredi <miklos@szeredi.hu>

	* Fix missing versioned symbol fuse_get_context@FUSE_2.2

2009-08-18  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.0

2009-08-18  Miklos Szeredi <miklos@szeredi.hu>

	* Add missing fuse_session_data to versionscript

	* Make sure all global symbols are prefixed with "fuse_" or "cuse_"

2009-07-16  Miklos Szeredi <miklos@szeredi.hu>

	* Clarify how the protocol version should be negotiated between
	kernel and userspace.  Notably libfuse didn't correctly handle the
	case when the supported major versions didn't match

	* Add missing pthread link for libulockmgr.  Patch by  Petr Salinger

2009-07-02  Miklos Szeredi <miklos@szeredi.hu>

	* The context is extended with a 'umask' field.  The umask is sent