@@ -1,3 +1,7 @@
+2010-02-03  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix stack alignment for clone()
+
 2010-02-01  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.8.3
